{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 19,
  "lineage": "a5b0d1a2-ca52-045d-316f-984f04a475f9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-016053326fe1bc3d4",
            "arn": "arn:aws:ec2:us-east-1:058264155332:elastic-ip/eipalloc-016053326fe1bc3d4",
            "association_id": "eipassoc-0609a11b27f550c79",
            "domain": "vpc",
            "id": "eipalloc-016053326fe1bc3d4",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d61424f6aa8afa6d",
            "private_dns": "ip-10-0-1-54.ec2.internal",
            "private_ip": "10.0.1.54",
            "public_dns": "ec2-34-229-72-187.compute-1.amazonaws.com",
            "public_ip": "34.229.72.187",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "healthcare-lab-nat-eip"
            },
            "tags_all": {
              "Name": "healthcare-lab-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264155332:internet-gateway/igw-049aadc93ac6dd6ae",
            "id": "igw-049aadc93ac6dd6ae",
            "owner_id": "058264155332",
            "tags": {
              "Name": "healthcare-lab-igw"
            },
            "tags_all": {
              "Name": "healthcare-lab-igw"
            },
            "vpc_id": "vpc-06435b05a73f3514a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-016053326fe1bc3d4",
            "association_id": "eipassoc-0609a11b27f550c79",
            "connectivity_type": "public",
            "id": "nat-0e899fff53803b889",
            "network_interface_id": "eni-0d61424f6aa8afa6d",
            "private_ip": "10.0.1.54",
            "public_ip": "34.229.72.187",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-071fee31751ca11aa",
            "tags": {
              "Name": "healthcare-lab-nat"
            },
            "tags_all": {
              "Name": "healthcare-lab-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264155332:route-table/rtb-0fbf7a4e0bcc04b66",
            "id": "rtb-0fbf7a4e0bcc04b66",
            "owner_id": "058264155332",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e899fff53803b889",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "healthcare-lab-private-rt"
            },
            "tags_all": {
              "Name": "healthcare-lab-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06435b05a73f3514a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264155332:route-table/rtb-0191c5349315068ca",
            "id": "rtb-0191c5349315068ca",
            "owner_id": "058264155332",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-049aadc93ac6dd6ae",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "healthcare-lab-public-rt"
            },
            "tags_all": {
              "Name": "healthcare-lab-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06435b05a73f3514a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-091408e225bd0a543",
            "route_table_id": "rtb-0fbf7a4e0bcc04b66",
            "subnet_id": "subnet-06b9d67d155b94e12"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_1",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-005fc3a170126790d",
            "route_table_id": "rtb-0191c5349315068ca",
            "subnet_id": "subnet-071fee31751ca11aa"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264155332:subnet/subnet-06b9d67d155b94e12",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b9d67d155b94e12",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264155332",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "healthcare-lab-private-1"
            },
            "tags_all": {
              "Name": "healthcare-lab-private-1"
            },
            "vpc_id": "vpc-06435b05a73f3514a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264155332:subnet/subnet-071fee31751ca11aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-071fee31751ca11aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264155332",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "healthcare-lab-public-1"
            },
            "tags_all": {
              "Name": "healthcare-lab-public-1"
            },
            "vpc_id": "vpc-06435b05a73f3514a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264155332:vpc/vpc-06435b05a73f3514a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08ad4dea4c85e690e",
            "default_route_table_id": "rtb-0f4657b863733dba7",
            "default_security_group_id": "sg-0429447196d48847f",
            "dhcp_options_id": "dopt-04e492271d83b0d49",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06435b05a73f3514a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f4657b863733dba7",
            "owner_id": "058264155332",
            "tags": {
              "Name": "healthcare-lab-vpc"
            },
            "tags_all": {
              "Name": "healthcare-lab-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}